--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <div id="mc_embed_signup">
 <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-  <label for="mce-EMAIL">Subscribe to our mailing list</label>
-  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Entrez votre email..." required>
+    
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Envoyer" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
