--- a/index.html
+++ b/index.html
@@ -87,11 +87,17 @@
 <div id="mc_embed_signup">
 <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Entrez votre email..." required>
+
+    <div class="col-md-6 col-sm-6 col-xs-12">
+  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre Email..." required>
+  </div>
     
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div class="col-md-6 col-sm-6 col-xs-12">
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Envoyer" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+
     </div>
 </form>
 </div>
