--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="banner">
          <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> </div>
          <div class="bann_caption">
-         <img src="images/logo.svg">
+         <img src="images/Logo Blanc rose.svg">
             <div class="container">
             <div class="col-md-6 col-sm-12 col-md-offset-0">
                <h4>Vendre autrement ses créations mode..</h3>
