--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
          <img src="images/Logo Blanc rose.svg">
             <div class="container">
             <div class="col-md-6 col-sm-12 col-md-offset-0">
-               <h4>Vendre autrement ses créations mode..</h3>
+               <h3>Vendre autrement ses créations mode.</h3>
                <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ” <br>Laissez-nous votre email et soyez les premiers informés de notre sortie !</br></p>
 
 
@@ -88,16 +88,15 @@
 <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 
-    <div class="col-md-6 col-sm-6 col-xs-12">
+    <div class="col-md-6 col-sm-6 col-xs-6">
   <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre Email..." required>
   </div>
     
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div class="col-md-6 col-sm-6 col-xs-12">
+    <div class="col-md-6 col-sm-6 col-xs-6">
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Envoyer" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="&#10003" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
-
     </div>
 </form>
 </div>
@@ -110,69 +109,8 @@
       </div>
    </section>
 
-    <!--subscribe-->
-   <section class="subscribe big_block">
-     <div class="container">
-     <div class="col-md-6 col-sm-6 col-xs-12">
-         <div class="carte-cadeau">
-           <div class="bloc"> 
-               <img class=icon src="images/gift-icon.svg">
-           </div>    
-           <div class="bloc" id="gift-text">
-               <h6>Carte cadeau</h6>
-               <p class="carte-cadeau-par">Offrez la nouvelle expérience shopping modames !</p>
-            </div>
-         </div>
-      </div>
-     <div class="col-md-6 col-sm-6 col-xs-12">
-               <h5>Abonnez-vous à notre newsletter</h5>
-               <p>Recevez toutes les actualités modames, les bons plans, les nouveautés...</p>
-         <div class="form-group">
-               <input type="email" placeholder="Entrez votre email..." id="" class="form-control">
-         </div>
-     </div>
-     </div>
-    </section>
-   <!--footer-->
-   <footer id="anchor_footer_1" class="big_block">
-      <div class="container">
-            <!--Copyright-->
-            <div class="col-md-3 col-sm-3 col-xs-12">
-               <img src="images/logo.svg">
-               <p>&copy; 2016 modames SAS.<br>Tous droits réservés</br></p>
-               <p><a href="https://www.google.fr/webhp?hl=fr">Mentions légales</a> / <a href="https://www.google.fr/webhp?hl=fr">CGV</a></p>
-               </div>
-               
-               <!--Footer links-->
-            <div class="col-md-3 col-sm-3 col-xs-12">
-            <ul class="foot_nav style_2">
-               <li><a href="index.html">Blog</a></li>
-               <li><a href="index.html">Comment ça marche ?</a></li>
-               <li><a href="services_layout_1.html">FAQ</a></li>
-            </ul>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-12">
-            <ul class="foot_nav style_2">
-               <li><a href="contact.html">Contact</a></li>
-               <li><a href="#">Qui sommes-nous ?</a></li>
-               <li><a href="#">Nous rejoindre</a></li>
-            </ul>
-            </div>
-             <!--social icons-->
-            <div class="col-md-3 col-sm-3 col-xs-12">
-            <h6>Nous suivre</h6>
-               <div class="social_icons">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-pinterest-p"></i></a>
-               </div>
-            </div>
-            </div>
-         </div>
-      </div>
-   </footer>
-</section>
+   
+  
 <!--wrapper close--> 
 <!--go-top link--> 
 <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a> 
