--- a/index landing.html
+++ b/index landing.html
@@ -73,7 +73,8 @@
    <!--slider-->
    <section class="slider">
       <div class="banner">
-         <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> </div>
+         <div class="banner_bg"> 
+         <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> </div>
          <div class="bann_caption">
          <img src="images/Logo Blanc rose.svg">
             <div class="container">
@@ -112,8 +113,6 @@
    
   
 <!--wrapper close--> 
-<!--go-top link--> 
-<a href="#" class="go-top"><i class="fa fa-angle-up"></i></a> 
 <!--Modal Box-->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
    <div class="modal-dialog modal-lg" role="document">
