--- a/index landing.html
+++ b/index landing.html
@@ -49,7 +49,7 @@
 <!-- Theme Less styles -->
 <link href="styles/theme_style.less" rel="stylesheet/less">
 <!-- Custom styles -->
-<link href="styles/custom.css" rel="stylesheet">
+<link href="styles/custom landing.css" rel="stylesheet">
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 
@@ -73,8 +73,7 @@
    <!--slider-->
    <section class="slider">
       <div class="banner">
-         <div class="banner_bg"> 
-         <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> </div>
+         <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> </div>
          <div class="bann_caption">
          <img src="images/Logo Blanc rose.svg">
             <div class="container">
@@ -85,26 +84,26 @@
 
 <!-- Begin MailChimp Signup Form -->
 
-<div id="mc_embed_signup">
-<form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
+              <div id="mc_embed_signup">
+                   <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                     <div id="mc_embed_signup_scroll">
 
-    <div class="col-md-6 col-sm-6 col-xs-6">
-  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre Email..." required>
-  </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6">
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre Email..." required>
+                     </div>
     
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div class="col-md-6 col-sm-6 col-xs-6">
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="&#10003" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-    </div>
-</form>
-</div>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="&#10003" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                   </div>
+                   </div>
+                </form>
+            </div>
 
 <!--End mc_embed_signup-->
 
-</div>
+            </div>
             </div>
          </div>
       </div>
