--- a/index landing.html
+++ b/index landing.html
@@ -72,12 +72,14 @@
    </header>
    <!--slider-->
    <section class="slider">
+ 
       <div class="banner">
-         <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> </div>
+         <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> 
          <div class="bann_caption">
-         <img src="images/Logo Blanc rose.svg">
+         
             <div class="container">
             <div class="col-md-6 col-sm-12 col-md-offset-0">
+            <img src="images/Logo Blanc rose.svg">
                <h3>Vendre autrement ses créations mode.</h3>
                <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ” <br>Laissez-nous votre email et soyez les premiers informés de notre sortie !</br></p>
 
@@ -101,6 +103,7 @@
                 </form>
             </div>
 
+        </div>
 <!--End mc_embed_signup-->
 
             </div>
