--- a/index landing.html
+++ b/index landing.html
@@ -72,7 +72,7 @@
    </header>
    <!--slider-->
    <section class="slider">
- 
+
       <div class="banner">
          <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> 
          <div class="bann_caption">
@@ -82,7 +82,7 @@
             <img src="images/Logo Blanc rose.svg">
                <h3>Vendre autrement ses créations mode.</h3>
                <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ” <br>Laissez-nous votre email et soyez les premiers informés de notre sortie !</br></p>
-
+                <p>Pour en savoir plus, contactez-nous.</p>
 
 <!-- Begin MailChimp Signup Form -->
 
@@ -101,12 +101,15 @@
                    </div>
                    </div>
                 </form>
-            </div>
 
+            </div>
         </div>
+              
 <!--End mc_embed_signup-->
 
+
             </div>
+                
             </div>
          </div>
       </div>
