Changement background + Footer
Changement du background. Plus dans banner mais dans slider dans CSS.
Réinsertion du footer

--- a/index landing.html
+++ b/index landing.html
@@ -74,7 +74,7 @@
    <section class="slider">
 
       <div class="banner">
-         <div class="banner_bg"> <img class="img-responsive" src="images/fond-site-flou-2.jpg" alt=""/> 
+         <div class="banner_bg"> 
          <div class="bann_caption">
          
             <div class="container">
@@ -115,6 +115,46 @@
       </div>
    </section>
 
+<!--footer-->
+   <footer id="anchor_footer_1" class="big_block">
+      <div class="container">
+            <!--Copyright-->
+            <div class="col-md-3 col-sm-3 col-xs-12">
+               <img src="images/logo.svg">
+               <p>&copy; 2016 modames SAS.<br>Tous droits réservés</br></p>
+               <p><a href="https://www.google.fr/webhp?hl=fr">Mentions légales</a> / <a href="https://www.google.fr/webhp?hl=fr">CGV</a></p>
+               </div>
+
+               <!--Footer links-->
+            <div class="col-md-3 col-sm-3 col-xs-12">
+            <ul class="foot_nav style_2">
+               <li><a href="index.html">Blog</a></li>
+               <li><a href="index.html">Comment ça marche ?</a></li>
+               <li><a href="services_layout_1.html">FAQ</a></li>
+            </ul>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-12">
+            <ul class="foot_nav style_2">
+               <li><a href="contact.html">Contact</a></li>
+               <li><a href="#">Qui sommes-nous ?</a></li>
+               <li><a href="#">Nous rejoindre</a></li>
+            </ul>
+            </div>
+             <!--social icons-->
+            <div class="col-md-3 col-sm-3 col-xs-12">
+            <h6>Nous suivre</h6>
+               <div class="social_icons">
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-pinterest-p"></i></a>
+               </div>
+            </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+</section>
    
   
 <!--wrapper close--> 
