--- a/index landing.html
+++ b/index landing.html
@@ -126,28 +126,19 @@
                </div>
 
                <!--Footer links-->
-            <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="col-md-6 col-sm-6 col-xs-12">
             <ul class="foot_nav style_2">
-               <li><a href="index.html">Blog</a></li>
-               <li><a href="index.html">Comment ça marche ?</a></li>
-               <li><a href="services_layout_1.html">FAQ</a></li>
+               <li>06.01.75.96.16</li>
+               <li>243 allée Théodore Monod,Technopôle Izarbel 64210 BIDART</li>
             </ul>
             </div>
-            <div class="col-md-3 col-sm-3 col-xs-12">
-            <ul class="foot_nav style_2">
-               <li><a href="contact.html">Contact</a></li>
-               <li><a href="#">Qui sommes-nous ?</a></li>
-               <li><a href="#">Nous rejoindre</a></li>
-            </ul>
-            </div>
+
              <!--social icons-->
             <div class="col-md-3 col-sm-3 col-xs-12">
             <h6>Nous suivre</h6>
                <div class="social_icons">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-instagram"></i></a>
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
                   <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-pinterest-p"></i></a>
                </div>
             </div>
             </div>
