Suppression image Banner
Image sur slider dans CSS et non plus sur banner dans HTML

--- a/index landing.html
+++ b/index landing.html
@@ -74,7 +74,7 @@
    <section class="slider">
 
       <div class="banner">
-         <div class="banner_bg"> <img class="img-responsive" src="images/modames-slider.png" alt=""/>
+         <div class="banner_bg">
          <div class="bann_caption">
          
             <div class="container">
