--- a/index landing.html
+++ b/index landing.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <title>modames</title>
 <meta name="keywords" content="HTML5 Template">
-<meta name="description" content="Vraiment un super site">
+<meta name="description" content="modames">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -52,7 +52,7 @@
 <link href="styles/custom landing.css" rel="stylesheet">
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-
+<link rel="shortcut icon" href="images/favicon.png">
 </head>
 <body>
 <!--preloader-->
@@ -81,8 +81,9 @@
             <div class="col-md-6 col-sm-12 col-md-offset-0">
             <img src="images/Logo Blanc rose.svg">
                <h3>Vendre autrement ses créations mode.</h3>
-               <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ” <br>Laissez-nous votre email et soyez les premiers informés de notre sortie !</br></p>
-                <p>Pour en savoir plus, contactez-nous.</p>
+               <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ”
+               <p>Laissez-nous votre email et soyez les premiers informés de notre sortie !</p>
+              <p>Pour en savoir plus, contactez-nous.</p>
 
 <!-- Begin MailChimp Signup Form -->
 
@@ -122,14 +123,15 @@
             <div class="col-md-3 col-sm-3 col-xs-12">
                <img src="images/logo.svg">
                <p>&copy; 2016 modames SAS.<br>Tous droits réservés</br></p>
-               <p><a href="https://www.google.fr/webhp?hl=fr">Mentions légales</a> / <a href="https://www.google.fr/webhp?hl=fr">CGV</a></p>
+               <p><a href="https://www.google.fr/webhp?hl=fr">Mentions légales</a></p>
                </div>
 
                <!--Footer links-->
             <div class="col-md-6 col-sm-6 col-xs-12">
-            <ul class="foot_nav style_2">
-               <li>06.01.75.96.16</li>
-               <li>243 allée Théodore Monod,Technopôle Izarbel 64210 BIDART</li>
+            <ul class="foot_nav style_2" class="coordonnees">
+               <li><i class="fa fa-envelope"></i> contact@modames.com</li>
+               <li><i class="fa fa-phone"></i> 06.01.75.96.16</li>
+               <li> <i class="fa fa-map-marker"></i> 243 allée Théodore Monod<br>Technopôle Izarbel</br>64210 BIDART</br></li>
             </ul>
             </div>
 
