--- a/index landing.html
+++ b/index landing.html
@@ -83,7 +83,6 @@
                <h3>Vendre autrement ses créations mode.</h3>
                <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ”
                <p>Laissez-nous votre email et soyez les premiers informés de notre sortie !</p>
-              <p>Pour en savoir plus, contactez-nous.</p>
 
               <div>
                                <!-- Begin MailChimp Signup Form -->
@@ -97,15 +96,17 @@
                   <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                       <div id="mc_embed_signup_scroll">
                     
-                    <input type="email" value="Votre email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre email" required>
                       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
-                      <div class="clear"><input type="submit" value="Ok !" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                      <input type="submit" value="Ok !" name="subscribe" id="mc-embedded-subscribe" class="button">
                       </div>
                   </form>
                   </div>
 
                   <!--End mc_embed_signup-->
+                 <p>Pour en savoir plus, contactez-nous.</p>
+
               </div>
             </div>
                 
