Fix mailchimp css +deleted 404

--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 <!-- Theme Less styles -->
 <link href="styles/theme_style.less" rel="stylesheet/less">
 <!-- Custom styles -->
-<link href="styles/custom landing.css" rel="stylesheet">
-<!-- Begin MailChimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<link href="styles/custom-landing.css" rel="stylesheet">
+<!-- Favicon -->
 <link rel="shortcut icon" href="images/favicon.png">
 </head>
 <body>
@@ -86,7 +85,6 @@
 
               <div>
                                <!-- Begin MailChimp Signup Form -->
-                  <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
                   <style type="text/css">
                     #mc_embed_signup{background:none; clear:left; font:14px Helvetica,Arial,sans-serif;}
                     /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
