--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-md-6 col-sm-12 col-md-offset-0">
             <img src="images/Logo Blanc rose.svg">
                <h3>Vendre autrement ses créations mode.</h3>
-               <p>“Modames est un service en ligne proposant aux femmes d’être conseillées par une styliste pour recevoir une tenue de créateurs personnalisée ”
+               <p>“Modames est un service en ligne proposant aux femmes de recevoir des tenues de créateurs personnalisée, conseillées par une styliste.”
                <p>Laissez-nous votre email et soyez les premiers informés de notre sortie !</p>
 
               <div>
@@ -103,7 +103,7 @@
                   </div>
 
                   <!--End mc_embed_signup-->
-                 <p>Pour en savoir plus, contactez-nous.</p>
+                 <p>Pour en savoir plus,<a class="mailto" href="mailto:contact@modames.com">contactez-nous</a>.</p>
 
               </div>
             </div>
