--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-md-6 col-sm-12 col-md-offset-0">
             <img src="images/Logo Blanc rose.svg">
                <h3>Vendre autrement ses créations mode.</h3>
-               <p>“Modames est un service en ligne proposant aux femmes de recevoir des tenues de créateurs personnalisée, conseillées par une styliste.”
+               <p>“Modames est un service en ligne proposant aux femmes de recevoir des tenues de créateurs personnalisées, conseillées par une styliste.”
                <p>Laissez-nous votre email et soyez les premiers informés de notre sortie !</p>
 
               <div>
