--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <img src="images/Logo Blanc rose.svg">
                <h3>Vendre autrement ses créations mode.</h3>
                <p>“Modames est un service en ligne proposant aux femmes de recevoir des tenues de créateurs personnalisées, conseillées par une styliste.”
-               <p>Laissez-nous votre email et soyez les premiers informés de notre sortie !</p>
+               <p>Soyez les premiers informés de notre sortie !</p>
 
               <div>
                                <!-- Begin MailChimp Signup Form -->
@@ -103,7 +103,7 @@
                   </div>
 
                   <!--End mc_embed_signup-->
-                 <p>Pour en savoir plus,<a class="mailto" href="mailto:contact@modames.com">contactez-nous</a>.</p>
+                 <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ? <a href="mailto:contact@modames.com">Contactez-nous</a> et on pourra discuter autour d'un café !</p>
 
               </div>
             </div>
@@ -126,7 +126,7 @@
                <!--Footer links-->
             <div class="col-md-6 col-sm-6 col-xs-12">
             <ul class="foot_nav style_2" class="coordonnees">
-               <li><i class="fa fa-envelope"></i> contact@modames.com</li>
+               <li><i class="fa fa-envelope"></i><a href="mailto:contact@modames.com">contact@modames.com</a></li>
                <li><i class="fa fa-phone"></i> 06.01.75.96.16</li>
                <li> <i class="fa fa-map-marker"></i> 243 allée Théodore Monod<br>Technopôle Izarbel</br>64210 BIDART</br></li>
             </ul>
@@ -136,8 +136,8 @@
             <div class="col-md-3 col-sm-3 col-xs-12">
             <h6>Nous suivre</h6>
                <div class="social_icons">
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="https://www.linkedin.com/in/modames-sas-3815aa108" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://twitter.com/_modames" target="_blank"><i class="fa fa-twitter"></i></a>
                </div>
             </div>
             </div>
