--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
          
             <div class="container">
             <div class="col-md-6 col-sm-12 col-md-offset-0">
-            <img src="images/Logo Blanc rose.svg">
+            <img src="images/slider-logo.svg">
                <h3>Vendre autrement ses créations mode.</h3>
                <p>“Modames est un service en ligne proposant aux femmes de recevoir des tenues de créateurs personnalisées, conseillées par une styliste.”
                <p>Soyez les premiers informés de notre sortie !</p>
@@ -118,14 +118,14 @@
       <div class="container">
             <!--Copyright-->
             <div class="col-md-3 col-sm-3 col-xs-12">
-               <img src="images/logo.svg">
+               <img src="images/footer-logo.svg">
                <p>&copy; 2016 modames SAS.<br>Tous droits réservés</br></p>
                <p><a href="https://www.google.fr/webhp?hl=fr">Mentions légales</a></p>
                </div>
 
                <!--Footer links-->
             <div class="col-md-6 col-sm-6 col-xs-12">
-            <ul class="foot_nav style_2" class="coordonnees">
+            <ul class="foot_nav style_2">
                <li><i class="fa fa-envelope"></i><a href="mailto:contact@modames.com">contact@modames.com</a></li>
                <li><i class="fa fa-phone"></i> 06.01.75.96.16</li>
                <li> <i class="fa fa-map-marker"></i> 243 allée Théodore Monod<br>Technopôle Izarbel</br>64210 BIDART</br></li>
