--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   </div>
 
                   <!--End mc_embed_signup-->
-                 <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ? <a href="mailto:contact@modames.com">Contactez-nous</a> et on pourra discuter autour d'un café !</p>
+                 <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ? <a href="mailto:contact@modames.com">Contactez-nous</a> et nous pourrons discuter autour d'un café !</p>
 
               </div>
             </div>
