Update Fall landing page
Mise à jour de la landing pour l’automne

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             <div class="container">
             <div class="col-md-6 col-sm-12 col-md-offset-0">
             <img src="images/slider-logo.svg">
-               <h3>La nouvelle façon d'acheter des vêtements</h3>
+               <h3>La nouvelle façon de consommer la mode</h3>
+               <p>Modames compose et envoie à ses clientes une tenue personnalisée, issue de marques émergeantes,  partageant un idéal de qualité.</p>
                <p>Soyez les premières informées de notre sortie en 2017 !</p>
 
               <div>
