--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="col-md-6 col-sm-12 col-md-offset-0">
             <img src="images/slider-logo.svg">
                <h3>La nouvelle façon de consommer la mode</h3>
-               <p>Modames compose et envoie à ses clientes une tenue personnalisée, issue de marques émergeantes,  partageant un idéal de qualité.</p>
+               <p>Modames compose et envoie à ses clientes des tenues personnalisées, issues de marques émergentes, partageant un idéal de qualité.</p>
                <p>Soyez les premières informées de notre sortie en 2017 !</p>
 
               <div>
