--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>modames</title>
 <meta name="keywords" content="HTML5 Template">
 <meta name="description" content="modames">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
