New design for landing page

--- a/index.html
+++ b/index.html
@@ -68,51 +68,93 @@
 <section class="wrapper">
    <!--header-->
    <header>
-      <!--navbar-->
-
-   </header>
-   <!--slider-->
-   <section class="slider">
-
-      <div class="banner">
-         <div class="banner_bg">
-         <div class="bann_caption">
-
-            <div class="container">
-            <div class="col-md-6 col-sm-12 col-md-offset-0">
-            <img src="images/slider-logo.svg">
-               <h3>La nouvelle façon de consommer la mode</h3>
-               <p>Modames compose et envoie à ses clientes des tenues personnalisées, issues de marques émergentes, partageant un idéal de qualité.</p>
-               <p>Soyez les premières informées de notre sortie en 2017 !</p>
-
-              <div>
-                               <!-- Begin MailChimp Signup Form -->
-                  <style type="text/css">
-                    #mc_embed_signup{background:none; clear:left; font:14px Helvetica,Arial,sans-serif;}
-                    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                  </style>
-                  <div id="mc_embed_signup">
-                  <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                      <div id="mc_embed_signup_scroll">
-
-                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre email" required>
-                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
-                      <input type="submit" value="Ok !" name="subscribe" id="mc-embedded-subscribe" class="button">
-                      </div>
-                  </form>
-                  </div>
-
-                  <!--End mc_embed_signup-->
-                 <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ? <a href="mailto:contact@modames.com">Contactez-nous</a> et nous pourrons discuter autour d'un café !</p>
-
-              </div>
-            </div>
-
-            </div>
+     <!--navbar-->
+     <nav class="navbar navbar-default">
+       <div class="container-fluid">
+         <!-- Brand and toggle get grouped for better mobile display -->
+         <div class="navbar-header">
+           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+             <span class="sr-only">Menu</span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+           </button>
+           <a class="navbar-brand" href="index.html">
+             <img class="logo" src="images/logo.svg">
+           </a>
          </div>
-      </div>
+
+         <!-- Collect the nav links, forms, and other content for toggling -->
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+           <ul class="nav navbar-nav navbar-right">
+             <li><a href="mailto:contact@modames.com"><i class="fa fa-envelope"></i> contact@modames.com</a></li>
+             <li><a href=""><i class="fa fa-phone"></i> 06.01.75.96.16</a></li>
+           </ul>
+         </div>
+
+       </div>
+     </nav>
+   </header>
+   <!--SLIDER-->
+   <section class="slider">
+     <div class="banner">
+       <div class="bann_caption">
+         <div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
+             <div class="whitebox">
+               <!--Baseline-->
+               <div class="baseline">
+                 <p class="number-one">Les dénicheuses de marques</p>
+                 <hr class="line-seperate">
+               </div>
+               <!--Mission-->
+               <div class="mission">
+                 <p class="number-two-slider">Bientôt en ligne.</p>
+               </div>
+               <!--Sub-mission-->
+               <div class="sub-mission">
+                 <p class="number-three-slider">Soyez les premières informées<br>de notre sortie en 2017 !</p>
+               </div>
+               <!--CTA-->
+               <!-- Begin MailChimp Signup Form -->
+               <style type="text/css">
+               #mc_embed_signup{background:none; clear:left; font:14px Helvetica,Arial,sans-serif;}
+               /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+               </style>
+               <div id="mc_embed_signup">
+                 <form action="//modames.us12.list-manage.com/subscribe/post?u=7bd7d0d2ab8d0ab22da71a116&amp;id=d178d6678d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                   <div id="mc_embed_signup_scroll">
+
+                     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Votre email" required>
+                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7bd7d0d2ab8d0ab22da71a116_d178d6678d" tabindex="-1" value=""></div>
+                     <input type="submit" value="Ok !" name="subscribe" id="mc-embedded-subscribe" class="button">
+                   </div>
+                 </form>
+               </div>
+               <!-- End MailChimp Signup Form -->
+
+             </div>
+           </div>
+
+         </div>
+       </div>
+     </div>
+   </section>
+
+   <!--Ancre how it works-->
+   <section class="scroll-partner">
+     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
+       <i class="fa fa-caret-down" aria-hidden="true"></i>
+     </div>
+   </section>
+   <!--Partners-->
+   <section class="container-fluid">
+     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
+         <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ?<br><a class="contact-partner" href="mailto:contact@modames.com">Contactez-nous</a> et nous pourrons discuter autour d'un café !</p>
+     </div>
    </section>
 
 <!--footer-->
@@ -127,9 +169,7 @@
                <!--Footer links-->
             <div class="col-md-6 col-sm-6 col-xs-12">
             <ul class="foot_nav style_2">
-               <li><i class="fa fa-envelope"></i><a href="mailto:contact@modames.com">contact@modames.com</a></li>
-               <li><i class="fa fa-phone"></i> 06.01.75.96.16</li>
-               <li> <i class="fa fa-map-marker"></i> 243 allée Théodore Monod<br>Technopôle Izarbel</br>64210 BIDART</br></li>
+               <li><i class="fa fa-map-marker"></i> 243 allée Théodore Monod<br>Technopôle Izarbel</br>64210 BIDART</br></li>
             </ul>
             </div>
 
