--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
              <div class="whitebox">
                <!--Baseline-->
                <div class="baseline">
-                 <p class="number-one">Les dénicheuses de marques</p>
+                 <p class="number-one">Votre tenue personnalisée</p>
                  <hr class="line-seperate">
                </div>
                <!--Mission-->
@@ -150,10 +150,16 @@
        <i class="fa fa-caret-down" aria-hidden="true"></i>
      </div>
    </section>
+   <!--Mission-->
+<section class="container-fluid mission">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
+    <p class="mission-statement">Modames compose et envoie à ses clientes des tenues personnalisées, issues de marques émergentes, partageant un idéal de qualité.</p>
+  </div>
+</section>
    <!--Partners-->
-   <section class="container-fluid">
+   <section class="container-fluid brand-bloc">
      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 center">
-         <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ?<br><a class="contact-partner" href="mailto:contact@modames.com">Contactez-nous</a> et nous pourrons discuter autour d'un café !</p>
+       <p class="brand">Vous êtes une marque de prêt-à-porter féminin ? Un créateur de mode ?<br><a class="contact-partner" href="mailto:contact@modames.com">Contactez-nous</a> et nous pourrons discuter autour d'un café !</p>
      </div>
    </section>
 
